# yvio-freibeuter

./: README.md  app.elf  info.txt
docs/: 01_cargo_types.md  02_ship_upgrades.md  03_turn_order.md  04_quests.md  05_pirates_combat.md  06_voice_files.md  07_difficulty_levels.md  08_traders_pricing.md  09_negotiation.md
emu/: .gitignore  CMakeLists.txt  Makefile  shell.nix
emu/docs/: M0_FINDINGS.md  M1_STATUS.md
emu/src/: audio.c  audio_host.c  boot.c  boot.h  cpu.h  cpu_unicorn.c  elf.c  elf.h  emu.h  file.c  input.c  input.h  ipc.c  main.c  rfid.c  sched.c  server.c  server.h  syscall.c  trace.c  trace.h  ui.c
emu/web/: .env  README.md  index.html  package.json  tsconfig.json  vite.config.ts
emu/web/scripts/: make-board.mjs
emu/web/src/: App.vue  style.css  types.ts
emu/web/src/components/: BattleOverlay.vue  BoardMap.vue  CargoBar.vue  ConsoleButtons.vue  EquipmentPanel.vue  GameView.vue  LobbyView.vue  PortGrid.vue  VoiceHud.vue
emu/web/src/lib/: audio.ts  consts.ts  socket.ts
osup/: OS-s.elf  OS.elf  OS.elf.c  osup_v1.elf  osup_v2.elf
pirates/: Notes.txt  app.elf  app.elf.c  files_de.txt  files_en.txt  info.txt  lang.txt  texts_de.txt  texts_en.txt
pirates/menu/: de_menu.txt
